Add containsPII property to example schema

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -23,6 +23,11 @@ properties:
     description: Word description.
     label: Word label
     useInSummary: true
+  somethingPersonal:
+    type: Word
+    description: Some words which contains personal info.
+    label: Personal label
+    containsPII: true
   # someStringList:
   #   type: Word
   #   hasMany: true
