more obvious example type name

--- a/example-schema/type-hierarchy.yaml
+++ b/example-schema/type-hierarchy.yaml
@@ -10,7 +10,7 @@ test:
     - MVRType
     - FieldsetType
     - ValidatedType
-    - KitchenSink
+    - PropertiesTest
     - SimpleGraphBranch
     - SimpleGraphLeaf
     - DocumentStoreTest
