--- a/example-schema/types/PropertiesTest.yaml
+++ b/example-schema/types/PropertiesTest.yaml
@@ -1,4 +1,4 @@
-name: KitchenSink
+name: PropertiesTest
 description: A type that has a wide range of primitive properties on it.
 moreInformation: |
   These inclode Document, String, Enum, multiple choice Enum, Boolean, Integer
@@ -20,14 +20,6 @@ properties:
     useInSummary: true
     description: secondStringProperty description.
     label: secondStringProperty label
-  firstDocumentProperty:
-    type: Document
-    description: firstDocumentProperty description.
-    label: firstDocumentProperty label
-  secondDocumentProperty:
-    type: Document
-    description: secondDocumentProperty description.
-    label: secondDocumentProperty label
   booleanProperty:
     type: Boolean
     useInSummary: true
