--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ references:
       key: *cache_key
       paths:
         - ./node_modules/
+        - ./.cache
 
   only_version_tags: &only_version_tags
     tags:
@@ -64,6 +65,32 @@ jobs:
           root: *workspace_root
           paths:
             - .
+  cypress-build:
+    <<: *default_container_config
+
+    steps:
+      - *attach_workspace
+      - restore_cache:
+          keys:
+            - *cache_key
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      # run verify and then save cache.
+      # this ensures that the Cypress verified status is cached too
+      - run: make cypress-verify
+      # save new cache folder if needed
+      - save_cache:
+          key: *cache_key
+          paths:
+            - ~/.npm
+            - ~/.cache
+      # all other test jobs will run AFTER this build job finishes
+      # to avoid reinstalling dependencies, we persist the Cypress binary to workspace
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - .cache/Cypress
   test:
     <<: *default_container_config
     steps:
@@ -144,6 +171,10 @@ workflows:
     jobs:
       - install:
           context: rel-eng-creds
+          filters: *only_version_tags
+      - cypress-build:
+          requires:
+            - install
           filters: *only_version_tags
       - test:
           requires:
