--- a/example-schema/type-hierarchy.yaml
+++ b/example-schema/type-hierarchy.yaml
@@ -8,6 +8,7 @@ test:
     - RestrictedType
     - OddCodeType
     - MVRType
+    - MVRTypeChild
     - FieldsetType
     - ValidatedType
     - PropertiesTest
