--- a/example-schema/types/LockedFieldTest.yaml
+++ b/example-schema/types/LockedFieldTest.yaml
@@ -1,7 +1,5 @@
 name: LockedFieldTest
-description: Description of MainType.
-moreInformation: |
-  More information for MainType
+description: Description of LockedFieldTest.
 properties:
   code:
     type: Code
