Add tests for schema publishing

--- a/packages/tc-schema-publisher/scripts/__tests__/schema/types/TypeA.yaml
+++ b/packages/tc-schema-publisher/scripts/__tests__/schema/types/TypeA.yaml
@@ -12,3 +12,8 @@ properties:
     type: Word
     description: stringPropertyA description.
     label: stringPropertyA label
+  stringPropertyB:
+    type: Word
+    description: stringPropertyB description.
+    label: stringPropertyB label
+    isTest: true
