--- a/packages/tc-schema-publisher/scripts/__tests__/schema/enums.yaml
+++ b/packages/tc-schema-publisher/scripts/__tests__/schema/enums.yaml
@@ -3,3 +3,9 @@ AnEnum:
     Another example enum
   options:
     First: First option
+ATestEnum:
+  description: |
+    Another example enum
+  isTest: true
+  options:
+    First: First option
